--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="nav-wrapper">
                     <nav id="nav-container" class="header-nav nav-box">
                         <a class="nav-link" onclick="showPage('home')" data-page="home">Home</a>
+                        <a class="nav-link" onclick="showPage('podcast')" data-page="podcast">Podcast</a>
                         <a class="nav-link" onclick="showPage('about')" data-page="about">About</a>
                         <a class="nav-link" onclick="showPage('bts')" data-page="bts">Behind the Scenes</a>
                     </nav>
@@ -29,17 +30,51 @@
     </div>
 
 
-        <!-- Home Template -->
         <main id="content-container">
-            <div id="home-page" class="page-content">
+            <div id="home-page" class="page-content home-background">
                 <section class="hero-section">
-                    <div class="hero-content">
+                    <div class="hero-content home-hero-content">
                         <h1 class="hero-title">Welcome to <span class="gradient-text">Girl Talk</span></h1>
                         <p class="hero-subtitle">Your safe space for honest conversations about life, career, and everything in between.</p>
                     </div>
                 </section>
+                </div>
+        </main>
 
-                <!-- Featured Episode -->
+        <template id="about-template">
+            <div id="about-page" class="page-content">
+                <section class="mission-section">
+                    <div class="section-header">
+                        <h2>Our Mission</h2>
+                    </div>
+                    <div class="mission-card">
+                        <div class="mission-icon">💝</div>
+                        <p class="mission-text">
+                            We created <strong>Girl Talk</strong> to be the friend you can always count on, the one who keeps it real and makes you feel seen. This is your space for honest, unfiltered chats about life, career, and the common problems we face.
+                        </p>
+                    </div>
+                </section>
+
+                <section class="team-section">
+                    <div class="section-header">
+                        <h2>Meet the Team</h2>
+                        <p>The voices behind the conversation</p>
+                    </div>
+                    <div id="team-grid-placeholder" class="team-grid">
+                        </div>
+                </section>
+            </div>
+        </template>
+        
+        <template id="podcast-template">
+            <div id="podcast-page" class="page-content podcast-background">
+                <section class="hero-section podcast-hero">
+                    <div class="hero-content" style="background: rgba(255, 255, 255, 0.8); padding: 30px; border-radius: 20px; backdrop-filter: blur(5px);">
+                        <h1 class="hero-title" style="color: var(--purple-900);">Latest Episode: Choose Your Focus</h1>
+                        <p class="hero-subtitle" style="color: var(--gray-600); margin-bottom: 0;">Dive into our newest conversation!</p>
+                    </div>
+                </section>
+
                 <section class="featured-episode">
                     <div class="episode-card">
                         <div class="episode-artwork">
@@ -54,62 +89,49 @@
                                 For our first episode, you get to decide what we talk about! Listen to a talk about Girl Math, or explore the financial realities of Pink Tax.
                             </p>
                             <div id="intro-start-wrapper" class="player-controls">
-        <button id="intro-start-btn" class="cta-button">
-            Play Episode Intro ▶️
-        </button>
-    </div>
+                                <button id="intro-start-btn" class="cta-button">
+                                    Play Episode Intro ▶️
+                                </button>
+                            </div>
 
-    <div id="choice-buttons-wrapper" class="player-controls">
-        <button class="control-btn choice-btn" data-episode="girl-math">Girl Math</button>
-        <button class="control-btn choice-btn" data-episode="pink-tax">Pink Tax</button>
-    </div>
+                            <div id="choice-buttons-wrapper" class="player-controls">
+                                <button class="control-btn choice-btn" data-episode="girl-math">Girl Math</button>
+                                <button class="control-btn choice-btn" data-episode="pink-tax">Pink Tax</button>
+                            </div>
 
-    <div id="main-player-wrapper" class="audio-player">
-        <div class="progress-bar">
-            <div class="progress"></div>
-        </div>
+                            <div id="main-player-wrapper" class="audio-player">
+                                <div class="progress-bar">
+                                    <div class="progress"></div>
+                                </div>
 
-        <div class="player-controls">
-            <button id="play-btn" class="control-btn">▶️ Play</button>
-            <button id="pause-btn" class="control-btn hidden">⏸️ Pause</button>
-            <button id="start-over-btn" class="control-btn">🔄 Start Over</button>
-            <span id="time-display" class="time-display">0:00 / 0:00</span>
-        </div>
-    </div>
-
-    <audio id="episode-audio-source" src="audio/Intro final.mp3"></audio> 
-</div>
-
-        <!-- About Template -->
-        <template id="about-template">
-            <div id="about-page" class="page-content">
-                <!-- Mission Section -->
-                <section class="mission-section">
-                    <div class="section-header">
-                        <h2>Our Mission</h2>
-                    </div>
-                    <div class="mission-card">
-                        <div class="mission-icon">💝</div>
-                        <p class="mission-text">
-                            We created <strong>Girl Talk</strong> to be the friend you can always count on, the one who keeps it real and makes you feel seen. This is your space for honest, unfiltered chats about life, career, and the common problems we face.
-                        </p>
+                                <div class="player-controls">
+                                    <button id="play-btn" class="control-btn">▶️ Play</button>
+                                    <button id="pause-btn" class="control-btn hidden">⏸️ Pause</button>
+                                    <button id="start-over-btn" class="control-btn">🔄 Start Over</button>
+                                    <span id="time-display" class="time-display">0:00 / 0:00</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
-
-                <!-- Team Section -->
-                <section class="team-section">
-                    <div class="section-header">
-                        <h2>Meet the Team</h2>
-                        <p>The voices behind the conversation</p>
-                    </div>
-                    <div id="team-grid-placeholder" class="team-grid">
-                        <!-- Team members will be dynamically inserted here -->
+                <section class="episode-list-section">
+                    <div class="episode-list">
+                        <div class="card" style="margin-bottom: 20px; text-align: center;">
+                            <h3>Episode 2: Unpacking the Side Hustle Culture</h3>
+                            <p style="color: var(--gray-600);">Aired: Nov 1, 2025</p>
+                            <audio controls style="width: 100%; max-width: 400px; margin-top: 15px;">
+                                <source src="audio/Episode2_Placeholder.mp3" type="audio/mpeg">
+                            </audio>
+                        </div>
+                        <div class="card" style="margin-bottom: 20px; text-align: center;">
+                            <h3>Episode 3: The Reality of Friendships After 25</h3>
+                            <p style="color: var(--gray-600);">Coming Soon: Nov 8, 2025</p>
+                        </div>
                     </div>
                 </section>
             </div>
         </template>
 
-        <!-- BTS Template -->
         <template id="bts-template">
             <div id="bts-page" class="page-content">
                 <section class="bts-section">
@@ -134,7 +156,6 @@
             </div>
         </template>
 
-        <!-- Team Card Template -->
         <template id="team-card-template">
             <div class="team-member">
                 <div class="member-card">
@@ -150,7 +171,7 @@
             </div>
         </template>
 
-
+    <audio id="episode-audio-source" src="audio/Intro final.mp3"></audio> 
     <script src="script.js"></script>
 </body>
 </html>
